--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokedex-test",
-  "version": "0.11.1",
+  "version": "0.11.2",
   "homepage": "https://t0t-pokedex-exercise.netlify.com",
   "private": true,
   "dependencies": {
@@ -36,7 +36,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "tslint -c tslint.json \"src/**/*.${ts, tsx}\"",
-    "release": "standard-version && git push --follow-tags",
+    "release": "standard-version && git push --follow-tags && git push backup master --follow-tags",
     "deploy": "netlify deploy --dir=build --prod"
   },
   "eslintConfig": {
