--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/classnames": "^2.2.7",
     "@types/jest": "23.3.12",
     "@types/node": "10.12.18",
+    "@types/query-string": "^6.2.0",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
     "@types/react-redux": "^7.0.0",
@@ -19,6 +20,7 @@
     "classnames": "^2.2.6",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
+    "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.3",
     "react-dom": "^16.7.0",
